@@ -1,3 +1,6 @@
+* Sat Jan 22 2022 Trevor Vaughan <trevor@sicura.us> - 6.6.1
+- Add support for Amazon Linux 2
+
 * Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.6.0
 - Removed support for Puppet 5
 - Ensured support for Puppet 7 in requirements and stdlib
